working on mass vs cmf

--- a/research/massivepilot/cutouts.html
+++ b/research/massivepilot/cutouts.html
@@ -87,7 +87,7 @@
 	window.onload=init;
 
 </script>
-<iframe name='messageTxt' src='kravsources.txt' style='display:none'></iframe>
+<iframe name='messageTxt' src='overlap.txt' style='display:none'></iframe>
 <form>
 <textarea id="input" placeholder="a list of RA ad Dec"  name='nMessage'></textarea>
 </form>
